Fixing contact page

--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,8 @@
 	  </p>
 	  <p>
 	    <h4>Contact: </h4>
-	    Phone: +55 19 3521-1208
-	    Email: contact@cepetro.unicamp.br
+	    Phone: +55 19 3521-1208<br/>
+	    E-mail: contact@cepetro.unicamp.br
 	  </p>
 	</div>
 
