--- a/src/common/publications-header.html
+++ b/src/common/publications-header.html
@@ -49,7 +49,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
-	    <li><a href="./home.html">Home</a></li>
+	    <li><a href="./index.html">Home</a></li>
 	    <li><a href="./people.html">People</a></li>
 	    <li class="active"><a href="#">Publications</a></li>
 	    <li><a href="./projects.html">Projects</a></li>
