--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,21 @@
 
 
 <div class="row">
+<h3 class="page-header">2018</h3>
+  <p>
+AMARAL, J. N. ; BORIN, E. ; ASHLEY, D. ; BENEDICTO, C. ; COLP, E. ; HOFFMAM, J. H. S. ; KARPOFF, M. ; OCHOA, E. ; REDSHAW, M. ; RODRIGUES, R. . The Alberta Workloads for the SPEC CPU 2017 Benchmark Suite. In: 2018 IEEE International Symposium on Performance Analysis of Systems and Software, 2018, Belfast, Northern Ireland, UK. Proceedings of the 2018 IEEE International Symposium on Performance Analysis of Systems and Software, 2018.
+  </p>
+  <p>
+BLOOT, RODRIGO ; COIMBRA, TIAGO A. ; FACCIPIERI, JORGE H. ; TYGEL, MARTIN . Common Reflection Surface method in weakly anisotropic VTI media. GEOPHYSICS, 2018.
+  </p>
+  <p>
+GIMENES, T. L. ; PISANI, F. ; BORIN, E. . Evaluating the Performance and Cost of Accelerating Seismic Processing with CUDA, OpenCL, OpenACC, and OpenMP. In: International Parallel and Distributed Processing Symposium, 2018, Vancouver, Canada. Proceedings of the 2018 International Parallel & Distributed Processing Symposium, 2018.
+  </p>
+  <p>
+ROSARIO, V. M. ; PISANI, F. ; GOMES, A. ; BORIN, E. . Fog-Assisted Translation: Towards Efficient Software Emulation on Heterogeneous IoT Devices. In: 7th Workshop on Parallel Programming Models - Special Edition on Edge/Fog/In-Situ Computing, 2018, Vancouver, BC. Proceedings of the 7th Workshop on Parallel Programming Models, 2018.
+  </p>
+</div>
+<div class="row">
 <h3 class="page-header">2017</h3>
   <p>
 AULER, R. ; BORIN, E. . The case for flexible ISAs: unleashing hardware and software. In: 29th International Symposium on Computer Architecture and High Performance Computing (SBAC-PAD'17), 2017, Campinas. Proceedings of the 29th International Symposium on Computer Architecture and High Performance Computing, 2017.
