Alterado email João renato e Speglish

--- a/people.html
+++ b/people.html
@@ -208,7 +208,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  João Renato Domingos do Sacramento
                   <br/>Project Manager and System Administrator
-                  <br/>joao.renato at cepetro.unicamp.br
+                  <br/>joao.renato at ggaunicamp.com
 		  <br/><a href="http://lattes.cnpq.br/2329150184550696" target="_blank">Lattes</a>
 		</td>
               </tr>
@@ -284,7 +284,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  João Henrique Speglich
                   <br/>Software Developer
-                  <br/>speglichj at cepetro.unicamp.br
+                  <br/>speglichj at gmail.com
 		</td>
               </tr>
 	    </tbody>
