alterada as informações do prof doutor Tygel

--- a/people.html
+++ b/people.html
@@ -86,9 +86,8 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>Full professor at the Institute of Mathematics,
-	    Statistics and Scientific Computing at the University of
-	    Campinas (IMECC/UNICAMP).</p>
+	  <p>Professor Emeritus University of Campinas (UNICAMP)
+	Coordinator High Performance Geophysics (HPG) Laboratory  .</p>
         </div>
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
