--- a/people.html
+++ b/people.html
@@ -360,7 +360,23 @@
 	  </table>
         </div>
 
-
+         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/jeferson_brunetta.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		  Jeferson Rech Brunetta
+		  <br/>Computer Science Ph.D. Student
+                  <br/>jeferdjex at gmail.com
+		  <br/><a href=" http://lattes.cnpq.br/6853069528846411" target="_blank">Lattes</a>
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+        </div>
       </div>
       <!--..........................................................................-->
 
