Added Eva Maia, José Ribeiro and Thiango Dong informations

--- a/people.html
+++ b/people.html
@@ -381,6 +381,82 @@
       <!--..........................................................................-->
 
 
+      <!--..........................................................................-->
+      <p><h2 class="page-header">MS.C. Students</h2></p>
+
+      <div class="row">
+
+	<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/eva.maia.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		  Eva Maia Malta
+		  <br/>Computer Science MS.C. Student
+                  <br/>eva.maia.malta at hotmail.com
+		  <br/><a href=" http://lattes.cnpq.br/3183898522744068 " target="_blank">Lattes</a>
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+        </div>
+      <!--..........................................................................-->
+
+
+      <!--..........................................................................-->
+      <p><h2 class="page-header">IC. Students</h2></p>
+
+      <div class="row">
+
+ 	<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/thiago.dong.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		  Thiago Dong Cheng
+                  <br/>Computer Science IC Student
+                  <br/>thiagodchen at gmail.com
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+	  <p>
+	    Computer Engineering student at the Institute of
+	    Computing at the University of Campinas (IC/UNICAMP)
+	  </p>
+        </div>
+
+	 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/jose_ribeiro.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		  José Ribeiro Neto
+                  <br/>Computer Science IC Student
+                  <br/>j176665 at g.unicamp.br
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+	  <p>
+	    Computer Engineering student at the Institute of
+	    Computing at the University of Campinas (IC/UNICAMP)
+	  </p>
+        </div>
+
+
+      <!--..........................................................................-->
+
+
 
 
 
