--- a/people.html
+++ b/people.html
@@ -448,6 +448,23 @@
 	  </table>
 	 </div>
 
+	 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/william.hayashida.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		  Willian Massahiro Hayashida
+                  <br/>IC Student
+                  <br/>will.hayashida07 at gmail.com
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+	 </div>
+
 
       <!--..........................................................................-->
 
