added Matheus and Thamiris informations

--- a/people.html
+++ b/people.html
@@ -410,7 +410,7 @@
 
 
       <!--..........................................................................-->
-      <p><h2 class="page-header">IC. Students</h2></p>
+      <p><h2 class="page-header">Undergraduate Students</h2></p>
 
       <div class="row">
 
@@ -423,7 +423,7 @@
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Thiago Dong Cheng
-                  <br/>Computer Science IC Student
+                  <br/>Undergraduate Researcher 
                   <br/>thiagodchen at gmail.com
 		</td>
               </tr>
@@ -440,7 +440,7 @@
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  José Ribeiro Neto
-                  <br/>Computer Science IC Student
+                  <br/>Undergraduate Researcher 
                   <br/>j176665 at g.unicamp.br
 		</td>
               </tr>
@@ -457,8 +457,42 @@
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Willian Massahiro Hayashida
-                  <br/>IC Student
+                  <br/>Undergraduate Researcher 
                   <br/>will.hayashida07 at gmail.com
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+	 </div>
+
+         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/semFoto.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		  Thamiris Florindo Coelho
+                  <br/>Undergraduate Researcher 
+                  <br/>thamiris.fcoelho at gmail.com
+		</td>
+              </tr>
+	    </tbody>
+	  </table>
+	 </div>
+
+         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+	  <table class="table">
+	    <tbody>
+              <tr>
+		<td style="background:rgb(240,240,240);height:100px;width:90px">
+		  <img src="images/people/semFoto.png" height="100px" class="img-rounded"/>
+		</td>
+		<td style="vertical-align:middle; background:rgb(240,240,240)">
+		   Matheus Rotta Alves
+                  <br/>Undergraduate Researcher 
+                  <br/>ra184403 at students.ic.unicamp.br
 		</td>
               </tr>
 	    </tbody>
