--- a/people.html
+++ b/people.html
@@ -269,6 +269,7 @@
 	    University of Campinas (IMECC/UNICAMP).
 	  </p>
         </div>
+      <div class="row">
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <table class="table">
@@ -357,6 +358,7 @@
 	    Computing at the University of Campinas (IC/UNICAMP)
 	  </p>
         </div>
+      <div class="row">
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <table class="table">
@@ -423,6 +425,7 @@
 	    </tbody>
 	  </table>
         </div>
+      <div class="row">
 
          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
 	  <table class="table">
@@ -511,6 +514,7 @@
 	    </tbody>
 	  </table>
 	 </div>
+      <div class="row">
 
 	 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
 	  <table class="table">
@@ -545,6 +549,7 @@
 	    </tbody>
 	  </table>
 	 </div>
+       <div class="row">
 
          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
 	  <table class="table">
