--- a/people.html
+++ b/people.html
@@ -219,7 +219,8 @@
 	  </p>
         </div>
 
-      </div>
+      </div
+>
       <div class="row">
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -269,6 +270,7 @@
 	    University of Campinas (IMECC/UNICAMP).
 	  </p>
         </div>
+
       <div class="row">
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -358,6 +360,7 @@
 	    Computing at the University of Campinas (IC/UNICAMP)
 	  </p>
         </div>
+      
       <div class="row">
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -425,6 +428,7 @@
 	    </tbody>
 	  </table>
         </div>
+    
       <div class="row">
 
          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -514,6 +518,7 @@
 	    </tbody>
 	  </table>
 	 </div>
+
       <div class="row">
 
 	 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -549,7 +554,8 @@
 	    </tbody>
 	  </table>
 	 </div>
-       <div class="row">
+
+      <div class="row">
 
          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
 	  <table class="table">
