added Charles informations

--- a/people.html
+++ b/people.html
@@ -304,7 +304,7 @@
              <img src="images/people/semFoto.png" height="100px" class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
-          Lucas de Magalhães Araújo
+        Lucas de Magalhães Araújo
                   <br/>Software Developer
                   <br/>lucas at ggaunicamp.com
                 </td>
@@ -312,8 +312,8 @@
             </tbody>
           </table>
           <p>
-         B.in Computer Scienc at the Institute of
-         Computing at the University of Campinas (IC/UNICAMP)
+        B.in Computer Scienc at the Institute of
+        Computing at the University of Campinas (IC/UNICAMP)
           </p>
         </div>
 
@@ -329,7 +329,7 @@
          <img src="images/people/joao.speglich.png" height="100px" class="img-rounded"/>
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
-		  João Henrique Speglich
+		João Henrique Speglich
                   <br/>Software Developer
                   <br/>speglichj at gmail.com
 		</td>
@@ -350,7 +350,7 @@
          <img src="images/people/nicholas.png" height="100px" class="img-rounded"/>
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
-		  Nicholas Torres Okita
+		Nicholas Torres Okita
                   <br/>Software Developer
                   <br/>nicholas.okita at gmail.com
 		</td>
@@ -389,6 +389,35 @@
         </div>
 
         </div>
+
+      <!--..........................................................................-->
+
+
+      <!--..........................................................................-->
+      <p><h2 class="page-header">Collaborators</h2></p>
+
+         <div class="row">
+
+           <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <table class="table">
+          <tbody>
+               <tr>
+         <td style="background:rgb(240,240,240);height:100px;width:90px">
+           <img src="images/people/charles.png" height="100px" class="img-rounded"/>
+              </td>
+         <td style="vertical-align:middle; background:rgb(240,240,240)">
+          Charles Boulhosa Rodamilans
+                <br/>Professor Dr.- Mackenzie
+                <br/>charlesrodamilans at gmail.com
+        <br/><a href=" http://lattes.cnpq.br/2322902706072097 " target="_blank">Lattes</a>
+      </td>
+            </tr>
+      </tbody>
+     </table>
+       </div>
+    
+    </div>
+          
       <!--..........................................................................-->
 
 
@@ -460,7 +489,7 @@
 
 
       <!--..........................................................................-->
-      <p><h2 class="page-header">MS.C. Students</h2></p>
+      <p><h2 class="page-header">M.Sc. Students</h2></p>
 
       <div class="row">
 
@@ -473,7 +502,7 @@
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Eva Maia Malta
-		          <br/>Computer Science MS.C. Student
+		          <br/>Computer Science M.Sc. Student
                   <br/>eva.maia.malta at hotmail.com
 		  <br/><a href=" http://lattes.cnpq.br/3183898522744068 " target="_blank">Lattes</a>
 		</td>
