added Paulo and Lucas photo

--- a/people.html
+++ b/people.html
@@ -280,7 +280,7 @@
             <tbody>
                  <tr>
            <td style="background:rgb(240,240,240);height:100px;width:90px">
-             <img src="images/people/semFoto.png" height="100px" class="img-rounded"/>
+             <img src="images/people/paulo.png" height="100px" class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
           Paulo Geovani Almeida Torres
@@ -301,12 +301,13 @@
             <tbody>
                  <tr>
            <td style="background:rgb(240,240,240);height:100px;width:90px">
-             <img src="images/people/semFoto.png" height="100px" class="img-rounded"/>
+             <img src="images/people/lucas_araujo.png" height="100px" class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
         Lucas de Magalhães Araújo
                   <br/>Software Developer
                   <br/>lucas at ggaunicamp.com
+                <br/><a href=" http://lattes.cnpq.br/2679160978967854 " target="_blank">Lattes</a>
                 </td>
               </tr>
             </tbody>
