Thigo Dong Name

--- a/people.html
+++ b/people.html
@@ -529,7 +529,7 @@
 		  <img src="images/people/thiago.dong.png" height="100px" class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
-		  Thiago Dong Cheng
+		  Thiago Dong Chen
                   <br/>Undergraduate Researcher 
                   <br/>thiagodchen at gmail.com
 		</td>
