--- a/people.html
+++ b/people.html
@@ -408,7 +408,7 @@
               </td>
          <td style="vertical-align:middle; background:rgb(240,240,240)">
           Charles Boulhosa Rodamilans
-                <br/>Professor Dr.- Mackenzie
+                <br/>Professor Dr. Mackenzie
                 <br/>charlesrodamilans at gmail.com
         <br/><a href=" http://lattes.cnpq.br/2322902706072097 " target="_blank">Lattes</a>
       </td>
