Added Tainá informations

--- a/people.html
+++ b/people.html
@@ -388,7 +388,26 @@
         University of Campinas (IMECC/UNICAMP).
           </p>
         </div>
-
+    
+    <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+      <table class="table">
+        <tbody>
+             <tr>
+       <td style="background:rgb(240,240,240);height:100px;width:90px">
+         <img src="images/people/taina.png" height="100px" class="img-rounded"/>
+            </td>
+        <td style="vertical-align:middle; background:rgb(240,240,240)">
+          Tainá Souza
+               <br/>Jr. Geophysicist
+               <br/>tsouza at ggaunicamp.com
+      <br/><a href="http://lattes.cnpq.br/4540231833191608" target="_blank">Lattes</a>
+             </td>
+           </tr>
+         </tbody>
+       </table>
+       <p>
+      M.Sc.student  at Electrical Engineering at University of Campinas (FEEC/UNICAMP).
+                                                                                                                                                                                   </div>
         </div>
 
       <!--..........................................................................-->
