Added Tainá informations

--- a/people.html
+++ b/people.html
@@ -406,7 +406,7 @@
          </tbody>
        </table>
        <p>
-      M.Sc.student  at Electrical Engineering at University of Campinas (FEEC/UNICAMP).
+      M.Sc. Student  at Electrical Engineering at University of Campinas (FEEC/UNICAMP).
                                                                                                                                                                                    </div>
         </div>
 
