--- a/people.html
+++ b/people.html
@@ -600,7 +600,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/semFoto.png" height="100px" class="img-rounded"/>
+		  <img src="images/people/thamiris.png" height="100px" class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Thamiris Florindo Coelho
