text correction in the index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<p>
 	  The High Performance Geophysics Lab, or HPG, is a
 	  multidisciplinary research laboratory that aims at solving
-	  geophysics related problems by combining expertise in
+	  geophysics related problems by combining expertises in
 	  geophysics, geology, physics, applied math and computer
 	  science. The lab has successfully developed research
 	  projects with support from major industry players, such as
@@ -76,7 +76,7 @@
 	<p>
 	  The lab is coordinated by Prof. Martin Tygel
 	  (<a href="http://www.cepetro.unicamp.br">CEPETRO</a>/<a href="http://www.unicamp.br">Unicamp</a>), and Prof. Edson Borin (<a href="http://www.ic.unicamp.br">Institute of Computing</a>/<a href="http://www.unicamp.br">Unicamp</a>).
-	  The HPG team is composed by roughly 20
+	  The HPG team is composed by roughly 24
 	  people, including geophysics and computer science
 	  researchers, professional geophysicists and software
 	  developers, IT and support staff, PhD and Ms.C. students,
