standardization of staffs emails (ggaunicamp)

--- a/people.html
+++ b/people.html
@@ -86,7 +86,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>Professor Emeritus University of Campinas (UNICAMP)
+	  <p>Professor Emeritus of University of Campinas (UNICAMP)
 	Coordinator High Performance Geophysics (HPG) Laboratory  .</p>
         </div>
 
@@ -114,7 +114,7 @@
 	  develops research on computer systems related topics,
 	  including compilers, computer architecture, high-performance
 	  computing and cloud computing. Before joining Unicamp, Prof. Borin was
-	  a research scientist the Intel Labs, in Californa, USA.</p>
+	  a research scientist at the Intel Labs, in Californa, USA.</p>
 
         </div>
 
@@ -136,7 +136,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Dr. Jorge Henrique Faccipieri Junior
                   <br/>Project Manager and Researcher
-                  <br/>jorgehfj at cepetro.unicamp.br
+                  <br/>jorge at ggaunicamp.com
 		  <br/><a href="http://lattes.cnpq.br/0902533917666605" target="_blank">Lattes</a>
                   <a href="http://www.researchgate.net/profile/Jorge_Faccipieri_Junior" target="_blank">ResearchGate</a>
 		</td>
@@ -144,7 +144,7 @@
 	    </tbody>
 	  </table>
 	  <p>
-	    PhD in Science and Petroleum Engineering at University of Campinas (CEP/UNICAMP).
+	    PhD in Science and Petroleum Engineering at University of Campinas (FEM/UNICAMP).
         </div>
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -157,7 +157,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Dr. Tiago Antonio Alves Coimbra
                   <br/>Lead Researcher
-                  <br/>tcoimbra at cepetro.unicamp.br
+                  <br/>coimbra at ggaunicamp.com
 		  <br/><a href="http://lattes.cnpq.br/0472956965182462" target="_blank">Lattes</a>
 		</td>
               </tr>
@@ -186,7 +186,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Dany Rueda Serrano
                   <br/>Senior Geophysicist
-                  <br/>danyrued at unicamp.br
+                  <br/>dany at ggaunicamp.com
 		  <br/><a href="http://lattes.cnpq.br/4139869851016467" target="_blank">Lattes</a>
 		</td>
               </tr>
@@ -194,7 +194,7 @@
 	  </table>
 	  <p>
 	    M.Sc. at the Program of Petroleum Science and
-	    Engineering at University of Campinas (CEP/UNICAMP).
+	    Engineering at University of Campinas (FEM/UNICAMP).
         </div>
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -233,7 +233,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Caian Benedicto
                   <br/>Lead Software Developer
-                  <br/>caian at cepetro.unicamp.br
+                  <br/>caian at ggaunicamp.com
 		  <br/><a href="http://lattes.cnpq.br/8674348451133485" target="_blank">Lattes</a>
                   <a href="https://www.researchgate.net/profile/Caian_Benedicto" target="_blank">ResearchGate</a>
                   <a href="https://github.com/caian" target="_blank">GitHub</a>
@@ -258,7 +258,7 @@
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Alcides Goldoni Junior
                   <br/>System Administrator
-                  <br/>goldoni at cepetro.unicamp.br
+                  <br/>goldoni at ggaunicamp.com
 		  <br/><a href="http://lattes.cnpq.br/3193531699744390" target="_blank">Lattes</a>
                   <a href="https://github.com/agoldonijr" target="_blank">GitHub</a><br>
 		</td>
@@ -332,7 +332,7 @@
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		João Henrique Speglich
                   <br/>Software Developer
-                  <br/>speglichj at gmail.com
+                  <br/>joaospeglich at ggaunicamp.com
 		</td>
               </tr>
 	    </tbody>
@@ -353,7 +353,7 @@
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		Nicholas Torres Okita
                   <br/>Software Developer
-                  <br/>nicholas.okita at gmail.com
+                  <br/>nicholas.okita at ggaunicamp.com
 		</td>
               </tr>
 	    </tbody>
@@ -456,7 +456,7 @@
        <td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Gustavo Barroso Dias Ignácio
 		          <br/>Geophysics Ph.D. Student
-                  <br/>ignaciogbd at gmail.com
+                  <br/>ignaciogbd at ggaunicamp.com
 		  <br/><a href="..." target="_blank">Lattes</a>
 		</td>
               </tr>
