align description as justified

--- a/people.html
+++ b/people.html
@@ -86,7 +86,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>Professor Emeritus of University of Campinas (UNICAMP)
+	  <p align="justify">Professor Emeritus of University of Campinas (UNICAMP)
 	Coordinator High Performance Geophysics (HPG) Laboratory  .</p>
         </div>
 
@@ -108,7 +108,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>Prof. Edson Borin is currently the head of the
+	  <p align="justify">Prof. Edson Borin is currently the head of the
 	  Department of Computer Systems at the Institute of Computing
 	  (<a href="http://www.ic.unicamp.br">IC/UNICAMP</a>) and
 	  develops research on computer systems related topics,
@@ -143,7 +143,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    PhD in Science and Petroleum Engineering at University of Campinas (FEM/UNICAMP).
         </div>
 
@@ -163,7 +163,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>PhD in Applied Mathematics at the Institute of
+	  <p align="justify">PhD in Applied Mathematics at the Institute of
 	  Mathematics, Statistics and Scientific Computing at
 	  University of Campinas (IMECC/UNICAMP).</p>
         </div>
@@ -192,7 +192,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    M.Sc. at the Program of Petroleum Science and
 	    Engineering at University of Campinas (FEM/UNICAMP).
         </div>
@@ -213,7 +213,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    Computer Science student at the Institute of
 	    Computing at the University of Campinas (IC/UNICAMP).
 	  </p>
@@ -241,7 +241,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    B.Eng. in Computer Engineering by University of
 	    Campinas (FEEC/UNICAMP) and former visiting student of
 	    Computing Science at University of Alberta (UofA).
@@ -265,7 +265,7 @@
             </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    Undergraduate student of Applied Mathematics at
 	    University of Campinas (IMECC/UNICAMP).
 	  </p>
@@ -290,7 +290,7 @@
               </tr>
             </tbody>
           </table>
-          <p>
+          <p align="justify">
         Undergraduate student of Statistic at
         University of Campinas (IMECC/UNICAMP).
           </p>
@@ -312,7 +312,7 @@
               </tr>
             </tbody>
           </table>
-          <p>
+          <p align="justify">
         B.in Computer Scienc at the Institute of
         Computing at the University of Campinas (IC/UNICAMP)
           </p>
@@ -337,7 +337,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    Computer Engineering student at the Institute of
 	    Computing at the University of Campinas (IC/UNICAMP)
 	  </p>
@@ -358,7 +358,7 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p>
+	  <p align="justify">
 	    Computer Engineering student at the Institute of
 	    Computing at the University of Campinas (IC/UNICAMP)
 	  </p>
@@ -383,7 +383,7 @@
               </tr>
             </tbody>
           </table>
-          <p>
+          <p align="justify">
         B.in Applied Mathematics at
         University of Campinas (IMECC/UNICAMP).
           </p>
@@ -405,7 +405,7 @@
            </tr>
          </tbody>
        </table>
-       <p>
+       <p align="justify">
       M.Sc. Student  at Electrical Engineering at University of Campinas (FEEC/UNICAMP).
                                                                                                                                                                                    </div>
         </div>
