--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-------------------------------------------------------------------------------->
     <div class="jumbotron">
       <div class="container">
-	<p>
+	<p align="justify">
 	  The High Performance Geophysics Lab, or HPG, is a
 	  multidisciplinary research laboratory that aims at solving
 	  geophysics related problems by combining expertises in
@@ -73,7 +73,7 @@
 	  projects with support from major industry players, such as
 	  Petrobras, Baker Hughes, ANP, NVidia, Microsoft and AMD.
 	</p>
-	<p>
+	<p align="justify">
 	  The lab is coordinated by Prof. Martin Tygel
 	  (<a href="http://www.cepetro.unicamp.br">CEPETRO</a>/<a href="http://www.unicamp.br">Unicamp</a>), and Prof. Edson Borin (<a href="http://www.ic.unicamp.br">Institute of Computing</a>/<a href="http://www.unicamp.br">Unicamp</a>).
 	  The HPG team is composed by roughly 24
@@ -82,7 +82,7 @@
 	  developers, IT and support staff, PhD and Ms.C. students,
 	  and undergraduate research students.
 	</p>
-	<p>
+	<p align="justify">
 	  The HPG lab is located inside the Center for Petroleum
 	  Studies
 	  (<a href="http://www.cepetro.unicamp.br">CEPETRO</a>), at
@@ -105,7 +105,7 @@
 
         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <p><h2>State-of-the-art Geophysics</h2></p>
-	  <p>
+	  <p align="justify">
 	    At the HPG, we develop state-of-the-art geophysics methods
 	    to improve seismic imaging.
 	  </p>
@@ -113,7 +113,7 @@
 
         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <p><h2>State-of-the-art HW and SW technology</h2></p>
-	  <p>
+	  <p align="justify">
 	    At the HPG, we constantly research the use of new hardware
 	    and software technology to accelerate our software
 	    tools. Hardware accelerators such as GPUs and the Intel
@@ -124,7 +124,7 @@
 
         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <p><h2>Reliable and effective HPC</h2></p>
-	  <p>
+	  <p align="justify">
 	    At the HPG, we have developed computing technologies that
 	    enable our tools to run on systems composed by multiple
 	    computing clusters at the same time. It also tolerates
@@ -135,7 +135,7 @@
 
         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <p><h2>Effective Technology Transfer</h2></p>
-	  <p>
+	  <p align="justify">
 	    At the HPG, we are proud to deliver our partners with
 	    software tools that enable them to processes their
 	    datasets on their in-house HPC clusters. <br/>
