--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,9 @@
 	    CEP 13083-896<br/>
 	  </p>
 	  <p>
-	    <h4>Contact: </h4>
+	   <br/><h4>Contact: </h4>
 	    Phone: +55 19 3521-1208<br/>
-	    E-mail: contact@cepetro.unicamp.br
+	    E-mail: admin@ggaunicamp.com
 	  </p>
 	</div>
 
