--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
 	  <p>
-	    <h4>Address:</h4><br/>
+	    <h4>Address:</h4>
 	    R. Cora Coralina, 350<br/>
 	    Cidade Universitária Campinas/SP Brazil<br/>
 	    CEP 13083-896<br/>
