--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,38 @@
 
 <p><h2 class="page-header">Ongoing Projects</h2></p>
 <div class="row">
+		<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"><table class="table"><tbody>
+          <tr>
+	     <td style="vertical-align:middle;height:100px;width:90px">
+            <img id="project_image" src="images/partners/petrobras.png">
+	     </td>
+	     <td style="vertical-align:middle;">
+	      <h4>Research and development of technologies for high performance seismic processing on the cloud <h4>
+	     </td>
+	    </tr>
+	    <tr>
+	     <td colspan="2">
+              <p align="justify">In this project, we are investigating and developing new technologies to facilitate high-performance seismic processing using cloud computing services, including Software as a Service (SaaS), Platform as a Service (PaaS) and Infrastructure as a Service (IaaS). The resulting technologies will be consolidated on a platform that must optimize the cost and performance of seismic processing applications on the cloud, including loosely- and tightly-coupled high-performance seismic applications and machine learning based seismic applications.</p>
+      	</td>
+	    </tr>
+        </tbody></table></div>
+        
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"><table class="table"><tbody>
+          <tr>
+	     <td style="vertical-align:middle;height:100px;width:90px">
+            <img id="project_image" src="images/partners/petrobras.png">
+	     </td>
+	     <td style="vertical-align:middle;">
+	      <h4>High-Performance Geophysics lab computing infrastructure upgrade<h4>
+	     </td>
+	    </tr>
+	    <tr>
+	     <td colspan="2">
+             <p align="justify">In this project we are upgrading the high-performance computing infrastructure installed at the High-Performance Geophysics lab to expand the laboratory’s processing capacity. This upgrade includes a new high-performance computing system that will be able to perform up to 350 TeraFlops. This new system will be used to support the HPG research on new seismic processing technologies for 3D seismic datasets. </p> 
+             </td>
+	    </tr>
+        </tbody></table></div>
+		
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"><table class="table"><tbody>
           <tr>
 	     <td style="vertical-align:middle;height:100px;width:90px">
@@ -79,7 +111,7 @@
 	    </tr>
 	    <tr>
 	     <td colspan="2">
-              In this project we are generalizing the Common Reflection Surface (CRS) techniques developed on the last project to the prestack domain, and applying it to several important seismic imaging problems. Such problems include 5D Regularization, 3D Common Reflection Point Migration, Normal Incidence Point Tomography, Image Incident Point and Stereotomography. We are also developing an Anisotropic CRS. All these techniques are being developed over our SeisHPC framework, which will provide scalability and fault tolerance for very large problems on heterogeneous clusters of computers. This is a three-year project that started back in February 2016.
+              <p align="justify">In this project we are generalizing the Common Reflection Surface (CRS) techniques developed on the last project to the prestack domain, and applying it to several important seismic imaging problems. Such problems include 5D Regularization, 3D Common Reflection Point Migration, Normal Incidence Point Tomography, Image Incident Point and Stereotomography. We are also developing an Anisotropic CRS. All these techniques are being developed over our SeisHPC framework, which will provide scalability and fault tolerance for very large problems on heterogeneous clusters of computers. This is a three-year project that started back in February 2016.</p>
 	     </td>
 	    </tr>
         </tbody></table></div>
@@ -97,7 +129,7 @@
 	    </tr>
 	    <tr>
 	     <td colspan="2">
-              The project aims to develop algorithms/software for smart data compression of Logging-While-Drilling (LWD) acoustic data. The main focus is on developing a pattern recognition algorithm that can automatically detect structures on acoustic images away from the borehole. Downhole image interpretation based on the pattern recognition algorithm should enable the data transfer to the surface acquisition system in real time by mud pulse telemetry.
+              <p align="justify">The project aims to develop algorithms/software for smart data compression of Logging-While-Drilling (LWD) acoustic data. The main focus is on developing a pattern recognition algorithm that can automatically detect structures on acoustic images away from the borehole. Downhole image interpretation based on the pattern recognition algorithm should enable the data transfer to the surface acquisition system in real time by mud pulse telemetry.</p>
 	     </td>
 	    </tr>
         </tbody></table></div>
@@ -112,7 +144,7 @@
 	    </tr>
 	    <tr>
 	     <td colspan="2">
-              Research and development of algorithms for processing and imaging o seismic data over carbonate reservoirs. The project aims for the synergetic association of (1) the Common Reflection Surface (CRS) method and (2) the application of modern signal processing techniques, common in medical imaging, radar, sonar and telecommunications. This project has as results the following technologies: 2D/3D Common Reflection Surface (CRS) stacking software, developed using high performance computing (HPC) techniques and able to process 2D and 3D seismic data up to Terabytes. A compatible interface with the ProMax® package was also developed, along with a manual, allowing its use in production level; 2D/3D Normal Incidence Point (NIP) tomography software, constructing velocity models for depth migration. Designed for parallel computing and with a ProMax® interface; 2D/3D CRS Post-stack Time Migration, final stages of development; Investigations of the latest techniques on time-to-depth conversion.
+              <p align="justify">Research and development of algorithms for processing and imaging o seismic data over carbonate reservoirs. The project aims for the synergetic association of (1) the Common Reflection Surface (CRS) method and (2) the application of modern signal processing techniques, common in medical imaging, radar, sonar and telecommunications. This project has as results the following technologies: 2D/3D Common Reflection Surface (CRS) stacking software, developed using high performance computing (HPC) techniques and able to process 2D and 3D seismic data up to Terabytes. A compatible interface with the ProMax® package was also developed, along with a manual, allowing its use in production level; 2D/3D Normal Incidence Point (NIP) tomography software, constructing velocity models for depth migration. Designed for parallel computing and with a ProMax® interface; 2D/3D CRS Post-stack Time Migration, final stages of development; Investigations of the latest techniques on time-to-depth conversion.</p>
 	     </td>
 	    </tr>
         </tbody></table></div>
@@ -127,7 +159,7 @@
 	    </tr>
 	    <tr>
 	     <td colspan="2">
-              This project was carried out, from 2011 until 2013, at the Geophysical Computational Laboratory (LGC), at the Institute of Mathematics, Statistics and Computer Science (IMECC), coordinated by Professor Martin Tygel.
+              <p align="justify">This project was carried out, from 2011 until 2013, at the Geophysical Computational Laboratory (LGC), at the Institute of Mathematics, Statistics and Computer Science (IMECC), coordinated by Professor Martin Tygel.</p>
 	     </td>
 	    </tr>
         </tbody></table></div>
@@ -142,7 +174,7 @@
 	    </tr>
 	    <tr>
 	     <td colspan="2">
-              This project was carried out at the Geophysical Computational Laboratory (LGC), at the Institute of Mathematics, Statistics and Computer Science (IMECC), coordinated by Professor Martin Tygel.
+              <p align="justify">This project was carried out at the Geophysical Computational Laboratory (LGC), at the Institute of Mathematics, Statistics and Computer Science (IMECC), coordinated by Professor Martin Tygel.</p>
 	     </td>
 	    </tr>
         </tbody></table></div>
